Completly fixed the out of bound bug

--- a/events/responsive.css
+++ b/events/responsive.css
@@ -47,7 +47,9 @@
     header {
         flex-direction: column;
         gap: 30px;
+        padding: 30px 0px;
     }
+
     .hideOnMobile {
         display: none;
     }
